--- a/002倒影数字时钟/css/index.css
+++ b/002倒影数字时钟/css/index.css
@@ -41,6 +41,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 3em;
   z-index: 10;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
 }
